--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,8 +52,8 @@
                                 <br>
                                 mserhataslan@hotmail.com
                                 <br>
-                                Youtube Abone Sayacı: <%= sub %>
-                                <progress value= <%= sub %> max="50"></progress>
+                                Youtube Abone Sayacı: 4
+                                <progress value= 4 max="50"></progress>
                             </p>
                         </p>
                     </div>
